--- a/src/styles/fonts.scss
+++ b/src/styles/fonts.scss
@@ -1,20 +1,21 @@
 @import 'mixins';
+$path-graphik: '../assets/fonts/GraphikLCG/GraphikLCG';
 
-@include font-face(GraphikLCG, '../assets/fonts/GraphikLCG/GraphikLCG-Super', 1000, normal, otf);
-@include font-face(GraphikLCG, '../assets/fonts/GraphikLCG/GraphikLCG-SuperItalic', 1000, italic, otf);
-@include font-face(GraphikLCG, '../assets/fonts/GraphikLCG/GraphikLCG-Black', 900, normal, otf);
-@include font-face(GraphikLCG, '../assets/fonts/GraphikLCG/GraphikLCG-BlackItalic', 900, italic, otf);
-@include font-face(GraphikLCG, '../assets/fonts/GraphikLCG/GraphikLCG-Bold', 700, normal, otf);
-@include font-face(GraphikLCG, '../assets/fonts/GraphikLCG/GraphikLCG-BoldItalic', 700, italic, otf);
-@include font-face(GraphikLCG, '../assets/fonts/GraphikLCG/GraphikLCG-Semibold', 600, normal, otf);
-@include font-face(GraphikLCG, '../assets/fonts/GraphikLCG/GraphikLCG-SemiboldItalic', 600, italic, otf);
-@include font-face(GraphikLCG, '../assets/fonts/GraphikLCG/GraphikLCG-Medium', 500, normal, otf);
-@include font-face(GraphikLCG, '../assets/fonts/GraphikLCG/GraphikLCG-MediumItalic', 500, italic, otf);
-@include font-face(GraphikLCG, '../assets/fonts/GraphikLCG/GraphikLCG-Regular', 400, normal, otf);
-@include font-face(GraphikLCG, '../assets/fonts/GraphikLCG/GraphikLCG-RegularItalic', 400, italic, otf);
-@include font-face(GraphikLCG, '../assets/fonts/GraphikLCG/GraphikLCG-Light', 300, normal, otf);
-@include font-face(GraphikLCG, '../assets/fonts/GraphikLCG/GraphikLCG-LightItalic', 300, italic, otf);
-@include font-face(GraphikLCG, '../assets/fonts/GraphikLCG/GraphikLCG-Extralight', 200, normal, otf);
-@include font-face(GraphikLCG, '../assets/fonts/GraphikLCG/GraphikLCG-ExtralightItalic', 200, italic, otf);
-@include font-face(GraphikLCG, '../assets/fonts/GraphikLCG/GraphikLCG-Thin', 100, normal, otf);
-@include font-face(GraphikLCG, '../assets/fonts/GraphikLCG/GraphikLCG-ThinItalic', 100, italic, otf);
+@include font-face(GraphikLCG, '#{$path-graphik}-Super', 1000, normal, otf);
+@include font-face(GraphikLCG, '#{$path-graphik}-SuperItalic', 1000, italic, otf);
+@include font-face(GraphikLCG, '#{$path-graphik}-Black', 900, normal, otf);
+@include font-face(GraphikLCG, '#{$path-graphik}-BlackItalic', 900, italic, otf);
+@include font-face(GraphikLCG, '#{$path-graphik}-Bold', 700, normal, otf);
+@include font-face(GraphikLCG, '#{$path-graphik}-BoldItalic', 700, italic, otf);
+@include font-face(GraphikLCG, '#{$path-graphik}-Semibold', 600, normal, otf);
+@include font-face(GraphikLCG, '#{$path-graphik}-SemiboldItalic', 600, italic, otf);
+@include font-face(GraphikLCG, '#{$path-graphik}-Medium', 500, normal, otf);
+@include font-face(GraphikLCG, '#{$path-graphik}-MediumItalic', 500, italic, otf);
+@include font-face(GraphikLCG, '#{$path-graphik}-Regular', 400, normal, otf);
+@include font-face(GraphikLCG, '#{$path-graphik}-RegularItalic', 400, italic, otf);
+@include font-face(GraphikLCG, '#{$path-graphik}-Light', 300, normal, otf);
+@include font-face(GraphikLCG, '#{$path-graphik}-LightItalic', 300, italic, otf);
+@include font-face(GraphikLCG, '#{$path-graphik}-Extralight', 200, normal, otf);
+@include font-face(GraphikLCG, '#{$path-graphik}-ExtralightItalic', 200, italic, otf);
+@include font-face(GraphikLCG, '#{$path-graphik}-Thin', 100, normal, otf);
+@include font-face(GraphikLCG, '#{$path-graphik}-ThinItalic', 100, italic, otf);
